--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+piqi (0.6.6-1) unstable; urgency=low
+
+  * Bump upstream version, backwards incompatible changes:
+    - `piqi version` deprecated in favour of `piqi --version`
+
+ -- Ignas Vyšniauskas <i.vysniauskas@gmail.com>  Tue, 01 Apr 2014 00:22:21 +0200
+
 piqi (0.6.5-2) unstable; urgency=low
 
   * Cosmetic changes
