Update package description (bring in sync with upstream)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+piqi (0.6.6-2) unstable; urgency=low
+
+  * Update description (bring in sync with upstream)
+
+ -- Anton Lavrik <alavrik@piqi.org>  Tue, 01 Apr 2014 22:30:58 -0700
+
 piqi (0.6.6-1) unstable; urgency=low
 
   * Bump upstream version, backwards incompatible changes:
